pages count round off

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgres://mohanvenkatesh:Msvmsd183!@localhost:5432/bloging"
+DATABASE_URL="postgres://mohanvenkatesh:Msvmsd183!@localhost:5432/rust_blog_perfect"
