--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,5 @@ warp = "0.3"
 futures = "0.3"
 arrow2_convert = "0.4.2"
 serde_json = "1.0.96"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+
